--- a/mirrorui/stylus/coms/grids.styl
+++ b/mirrorui/stylus/coms/grids.styl
@@ -33,7 +33,7 @@ grids_n(screen-type)
     flex-wrap: wrap // 规定项目超过一行时,可以换到下一行
 // 均分的册格 n个册格,宽度为1/n
 .grid
-    flex: 1 1 0
+    flex: 1 1 auto
     overflow: hidden
 // 12列册格(mixinx) 默认用于手机,移动优先
 for i in range(1, 12)
