新增线性布局组件

--- a/mirrorui/stylus/index.styl
+++ b/mirrorui/stylus/index.styl
@@ -11,32 +11,36 @@
 @import "base"
 // 3.1快捷工具样式
 @import "coms/tools"
-// 4.零件
+// 4.布局
 @import "coms/grids"
+@import "coms/layoutline"
+// 5.显示
 @import "coms/h1h6p.styl"
+@import "coms/article"
+@import "coms/label.styl"
+@import "exts/kvpair"
 @import "coms/hr.styl"
-@import "coms/btn.styl"
+@import "exts/pageload"
+// 6.容器
+@import "coms/panel"
+@import "coms/msgpanel"
+@import "coms/tabs"
+@import "coms/cachepage"
+// 7.数据
+@import "coms/list"
 @import "coms/table.styl"
 @import "coms/form.styl"
-// 5.组件
-@import "coms/label.styl"
-@import "coms/article"
-@import "coms/msgpanel"
-@import "coms/sidemenu"
-@import "coms/docmenu"
-@import "coms/panel"
-@import "coms/tabs"
-@import "coms/msgbox"
-@import "coms/pagenum"
-@import "coms/datepick"
-@import "coms/cachepage"
-@import "coms/list"
+// 8.功能
+@import "coms/btn.styl"
 @import "coms/onoff"
+@import "coms/msgbox"
 @import "coms/msgshow"
+@import "coms/datepick"
+@import "coms/range"
+// 9.导航
+@import "coms/docmenu"
+@import "coms/sidemenu"
 @import "coms/mnavmenu"
 @import "coms/mdirbar"
-@import "coms/range"
-// 6.扩展
-@import "exts/pageload"
-@import "exts/kvpair"
 @import "exts/menubar"
+@import "coms/pagenum"
