--- a/mirrorui/stylus/coms/tools.styl
+++ b/mirrorui/stylus/coms/tools.styl
@@ -101,6 +101,15 @@ for size in range(5, 50, 5)
     margin-right: auto
 .mg-auto
     margin: auto
+// flex 布局时,让子元素在轴线上居中,用于父元素
+.f-h-center
+    justify-content: center
+.f-v-center
+    align-items: center
+// flex 布局时,让子元素在垂直轴线上居中,用于子元素
+.f-vs-center
+    align-self: center
+
 // display:none block 隐藏|显示
 .d-none
     display: none !important
