日期组件大改重构

--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -2398,255 +2398,281 @@ p {
 }
 .date-box {
   position: absolute;
-  width: 308px;
+  width: 282px;
   cursor: default;
   border: 1px solid var(--color-gray-dk);
-  padding: 10px 5px;
-  text-align: center;
   background-color: var(--color-white);
   outline: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   z-index: 10001;
 }
-.date-area-ymt {
-  display: flex;
+.date-row-ymt,
+.date-row-week,
+.date-row-day,
+.date-row-time {
+  display: grid;
+  grid-template-rows: 40px;
 }
-.date-area-year,
-.date-area-month,
-.date-area-today {
+.date-row-ymt {
+  grid-template-columns: 100px repeat(3, 40px);
+  justify-content: space-around;
+}
+.date-row-week,
+.date-row-day {
+  grid-template-columns: repeat(7, 1fr);
+}
+.date-row-day {
+  grid-template-rows: repeat(6, 40px);
+}
+.date-row-time {
+  grid-template-columns: 40px 120px 40px;
+  justify-content: space-around;
+}
+.date-col-ym,
+.date-col-today,
+.date-col-week,
+.date-col-day,
+.date-col-clear,
+.date-col-ok,
+.date-col-time,
+.date-col-prev,
+.date-col-next {
+  display: grid;
+  place-items: center;
+  font-weight: 500;
+}
+.date-col-ym,
+.date-col-week,
+.date-col-today,
+.date-col-time {
+  font-weight: 700;
+}
+.date-col-prev,
+.date-col-next {
   position: relative;
-  padding: 0 4px;
 }
-.date-area-year {
-  flex: 0 1 44%;
+.date-col-prev:before,
+.date-col-next:before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  border: 2px solid var(--color-primary-dk);
+  border-right: none;
+  border-bottom: none;
+  left: 50%;
+  width: 28.28px;
+  height: 28.28px;
 }
-.date-area-month {
-  flex: 0 1 38%;
+.date-col-prev:before {
+  top: 15.84px;
+  transform: translateX(-50%) rotate(45deg);
 }
-.date-area-today {
-  flex: 0 1 18%;
+.date-col-next:before {
+  bottom: 15.84px;
+  transform: translateX(-50%) rotate(-135deg);
 }
-.date-area-week {
-  display: flex;
-  padding: 5px 0;
+.date-col-day {
+  border-radius: 4px/4px;
 }
-.date-area-day {
-  display: flex;
-  flex-wrap: wrap;
+.date-col-ok {
+  grid-column: 3;
 }
-.date-area-tc {
-  display: flex;
-  position: relative;
+.date-weekend {
+  color: var(--color-danger);
 }
-.date-area-time,
-.date-area-clear,
-.date-area-ok {
-  border-top: 1px solid var(--color-gray-dk);
-  padding-top: 10px;
+.date-dayout {
+  opacity: 0.2;
 }
-.date-area-time {
-  flex: 0 1 64%;
+.date-today {
+  background-color: var(--color-gray);
 }
-.date-area-clear,
-.date-area-ok {
-  flex: 0 1 18%;
-  padding-left: 4px;
-  padding-right: 4px;
+.date-selected {
+  background-color: var(--color-primary-dk);
+  color: var(--color-white);
 }
-.date-select-year,
-.date-select-month,
-.date-select-hour,
-.date-select-minute,
-.date-select-second {
-  display: flex;
-  flex-wrap: wrap;
+.date-open {
+  background-color: var(--color-primary-lt);
+}
+.date-ops-ym,
+.date-ops-time {
   position: absolute;
   left: 0;
   width: 100%;
-  border: 1px solid var(--color-gray-dk);
-  border-radius: 4px;
-  border-top: none;
-  background-color: var(--color-gray);
-  z-index: 9999;
+  background-color: var(--color-white);
+  height: calc(100% - 40px);
 }
-.date-select-year {
-  height: 200px;
-  width: 200px;
+.date-ops-ym {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  top: 40px;
+  border-top: 1px solid var(--color-gray);
+}
+.date-ops-year,
+.date-ops-month {
+  display: grid;
+}
+.date-ops-year {
+  grid-template-rows: repeat(50, 40px);
+  grid-template-columns: repeat(4, 1fr);
   overflow-x: hidden;
   overflow-y: scroll;
-  padding: 10px 0;
 }
-.date-select-hour,
-.date-select-minute,
-.date-select-second {
-  bottom: 48px;
+.date-ops-month {
+  grid-template-rows: repeat(6, 40px);
+  grid-template-columns: repeat(2, 1fr);
+}
+.date-ops-time {
+  display: grid;
+  place-items: center;
+  bottom: 40px;
+  border-bottom: 1px solid var(--color-gray);
+}
+.date-ops-hour {
+  position: relative;
+  width: 80%;
+  height: 80%;
+  border-radius: 50%;
+  border: 1px solid var(--color-gray);
+}
+.date-ops-plus {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: grid;
+  grid-template-rows: repeat(2, 40px);
+  grid-template-columns: repeat(2, 40px) 20px repeat(2, 32px);
+}
+.date-op-year,
+.date-op-month,
+.date-op-hour,
+.date-op-am,
+.date-op-pm,
+.date-op-plus {
+  display: grid;
+  place-items: center;
+  font-weight: 500;
+}
+.date-op-month:nth-of-type(4n+1),
+.date-op-month:nth-of-type(4n+4),
+.date-op-year:nth-of-type(8n+1),
+.date-op-year:nth-of-type(8n+2),
+.date-op-year:nth-of-type(8n+7),
+.date-op-year:nth-of-type(8n+8),
+.date-op-hour,
+.date-op-plus {
+  background-image: repeating-radial-gradient(transparent, var(--color-gray-lt));
+}
+.date-op-hour {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+.date-op-hour.h12,
+.date-op-hour.h6 {
+  left: 50%;
+}
+.date-op-hour.h12 {
   top: 0;
 }
-.date-option-year,
-.date-option-month,
-.date-option-hour,
-.date-option-minute,
-.date-option-second,
-.date-option-title {
-  border-bottom: 1px solid var(--color-gray-dk);
-  font-weight: 500;
+.date-op-hour.h6 {
+  top: 100%;
 }
-.date-option-year,
-.date-option-month {
-  flex: 0 1 33.33333333%;
+.date-op-hour.h9,
+.date-op-hour.h3 {
+  top: 50%;
+}
+.date-op-hour.h9 {
+  left: 0;
+}
+.date-op-hour.h3 {
+  left: 100%;
+}
+.date-op-hour.h5,
+.date-op-hour.h1 {
+  left: 75%;
+}
+.date-op-hour.h11,
+.date-op-hour.h1 {
+  top: 6.9%;
+}
+.date-op-hour.h7,
+.date-op-hour.h5 {
+  top: 93.3%;
+}
+.date-op-hour.h11,
+.date-op-hour.h7 {
+  left: 25%;
+}
+.date-op-hour.h10,
+.date-op-hour.h2 {
+  top: 25%;
+}
+.date-op-hour.h10,
+.date-op-hour.h8 {
+  left: 6.9%;
+}
+.date-op-hour.h4,
+.date-op-hour.h2 {
+  left: 93.3%;
+}
+.date-op-hour.h8,
+.date-op-hour.h4 {
+  top: 75%;
+}
+.date-op-am,
+.date-op-pm {
+  position: absolute;
+  width: 40px;
   height: 40px;
-  line-height: 40px;
+  top: 20%;
+  transform: translateX(-50%);
 }
-.date-option-year:hover,
-.date-option-month:hover,
-.date-option-hour:hover,
-.date-option-minute:hover,
-.date-option-second:hover {
-  background-color: var(--color-gray-dk);
+.date-op-am {
+  left: 35%;
 }
-.date-option-year.selected,
-.date-option-month.selected {
-  background-color: var(--color-primary);
-  border-radius: 3px;
+.date-op-pm {
+  left: 65%;
 }
-.date-option-hour {
-  flex: 0 1 14.66666666%;
-  line-height: 60px;
+.date-op-plus:nth-of-type(3),
+.date-op-plus:nth-of-type(7) {
+  grid-column: 4;
 }
-.date-option-minute,
-.date-option-second {
-  flex: 0 1 10%;
-  line-height: 40px;
+@media (any-hover: hover) {
+  .date-col-ym:hover,
+  .date-col-prev:hover,
+  .date-col-next:hover,
+  .date-col-today:hover,
+  .date-col-day:hover,
+  .date-col-clear:hover,
+  .date-col-ok:hover,
+  .date-col-time:hover,
+  .date-op-year:hover,
+  .date-op-month:hover,
+  .date-op-hour:hover,
+  .date-op-am:hover,
+  .date-op-pm:hover,
+  .date-op-plus:hover {
+    background-color: var(--color-primary-lt);
+    cursor: pointer;
+  }
 }
-.date-option-title {
-  color: var(--color-gray-dk);
-}
-.date-btn-year,
-.date-btn-month,
-.date-btn-today,
-.date-btn-prev,
-.date-btn-next,
-.date-btn-time,
-.date-btn-clear,
-.date-btn-ok {
-  display: inline-block;
-  font-weight: 600;
-  border: 1px solid var(--color-gray-dk);
-  border-radius: 3px;
-  height: 26px;
-  line-height: 26px;
-  cursor: pointer;
-}
-.date-btn-year,
-.date-btn-month {
-  color: var(--font-color);
-  width: calc(100% - 52px);
-}
-.date-btn-today,
-.date-btn-prev,
-.date-btn-next {
-  color: var(--color-primary);
-}
-.date-btn-today,
-.date-btn-clear,
-.date-btn-ok {
-  width: 100%;
-}
-.date-btn-clear,
-.date-btn-ok {
-  font-weight: 500;
-  color: var(--font-color);
-}
-.date-btn-prev,
-.date-btn-next {
-  width: 26px;
-}
-.date-btn-clear:hover,
-.date-btn-ok:hover,
-.date-btn-prev:hover,
-.date-btn-next:hover {
-  background-color: var(--color-gray);
-}
-.date-btn-time {
-  font-weight: 500;
-  width: 32px;
-  margin: 0 5px;
-}
-.date-btn-time.open {
-  color: #fff;
-  background-color: var(--color-primary);
-}
-.date-item-week,
-.date-item-day {
-  flex: 0 1 14.28571428%;
-  font-weight: 500;
-  height: 28px;
-  line-height: 28px;
-  border-radius: 3px;
-}
-.date-item-week {
-  font-weight: 600;
-}
-.date-item-weekend {
-  color: #c00;
-}
-.date-item-day:hover {
-  background-color: var(--color-gray);
-}
-.date-item-dayoutmonth {
-  opacity: 0.3;
-}
-.date-item-day.selected:not(.date-item-today) {
-  background-color: var(--color-gray-dk);
-}
-.date-item-today,
-.date-item-today:hover {
-  color: #fff;
-  background-color: var(--color-primary);
+.date-op-year:active,
+.date-op-month:active,
+.date-op-hour:active,
+.date-op-am:active,
+.date-op-pm:active,
+.date-op-plus:active {
+  font-weight: 700;
 }
 @media only screen and (max-width: 640px) {
   .date-box {
     position: fixed;
-    width: calc(100vw - 2px);
-    height: 372px;
-    border-color: var(--color-gray-dk);
-    right: 0;
-    margin: auto;
-  }
-  .date-select-year {
-    height: 240px;
-  }
-  .date-option-year,
-  .date-option-month {
-    height: 48px;
-    line-height: 48px;
-  }
-  .date-btn-year,
-  .date-btn-month,
-  .date-btn-today,
-  .date-btn-prev,
-  .date-btn-next,
-  .date-btn-time,
-  .date-btn-clear,
-  .date-btn-ok {
-    height: 40px;
-    line-height: 40px;
-  }
-  .date-btn-year,
-  .date-btn-month {
-    width: calc(100% - 80px);
-  }
-  .date-btn-prev,
-  .date-btn-next {
-    width: 40px;
-  }
-  .date-item-week,
-  .date-item-day {
-    height: 36px;
-    line-height: 36px;
+    top: 25vh;
+    left: 0;
+    width: 100vw;
   }
 }
 .range-box {
