--- a/mirrorui/stylus/coms/datepick.styl
+++ b/mirrorui/stylus/coms/datepick.styl
@@ -1,186 +1,229 @@
 ﻿// 日期时间
+// PC页面容器宽度282px: 7天 X 40px = 280+2px左右border
+// 年/月/日/星期,长宽1:1 = 40px : 40px
+/////////////////////////////////////////////////////
+// 基本高度和宽度单位
+$date-row-height = 40px
+$date-col-width = 40px
 // 外层容器
 .date-box
     position: absolute
-    width: 308px
+    width: 282px
     cursor: default
     border: 1px solid var-gray-dk
-    padding: 10px 5px
-    text-align: center
     background-color: var-white
     outline: none
-    -webkit-user-select: none
-    -moz-user-select: none
-    -ms-user-select: none
     user-select: none
     z-index: 10001
-// 年月今天(第一行)
-.date-area
-    // 年,月,今天容器
+
+// 行row    
+.date-row
+    &-ymt, &-week, &-day, &-time
+        display: grid
+        grid-template-rows: $date-row-height
+    // 第1行 row1 年月退进今天
     &-ymt
-        display: flex
-    // 年,月,今天按钮容器
-    &-year, &-month, &-today
-        position: relative
-        padding: 0 4px
-    &-year
-        flex: 0 1 44%
-    &-month
-        flex: 0 1 38%
-    &-today
-        flex: 0 1 18%
-// 星期容器(第二行)
-.date-area-week
-    display: flex
-    padding: 5px 0
-// 日容器(第三行)
-.date-area-day
-    display: flex
-    flex-wrap: wrap
-// 时,分,秒,删除,确定 容器(第四行)
-.date-area
-    // 时,分,秒,删除,确定 容器
-    &-tc
-        display: flex
-        position: relative
-    &-time, &-clear, &-ok
-        border-top: 1px solid var-gray-dk
-        padding-top: 10px
+        grid-template-columns: 100px repeat(3,$date-col-width)
+        justify-content:space-around
+    // row2 星期
+    &-week,&-day
+        grid-template-columns: repeat(7,1fr)
+    // row3 日
+    &-day
+        grid-template-rows: repeat(6,$date-row-height)
+    // row4 清除/时间/确定
     &-time
-        flex: 0 1 64%
-    &-clear, &-ok
-        flex: 0 1 18%
-        padding-left: 4px
-        padding-right: 4px
-// 年份,月份,小时,分钟,秒 选项容器
-.date-select
-    &-year, &-month, &-hour, &-minute, &-second
-        display: flex
-        flex-wrap: wrap
+        grid-template-columns: $date-col-width 120px $date-col-width
+        justify-content: space-around
+
+// 列col
+.date-col
+    &-ym, &-today, &-week, &-day, &-clear, &-ok, &-time,&-prev, &-next
+        display: grid
+        place-items:center
+        font-weight:500
+    &-ym, &-week, &-today, &-time
+        font-weight:700
+    // 年/月
+    // 进退
+    &-prev, &-next
+        position:relative
+    &-prev:before,&-next:before
+        content:''
+        display:inline-block
+        position: absolute
+        border:2px solid var-primary-dk
+        border-right:none
+        border-bottom:none
+        left:50%
+        width:28.28px
+        height:28.28px
+    &-prev:before
+        top:15.84px
+        transform: translateX(-50%) rotate(45deg)
+    &-next:before
+        bottom:15.84px
+        transform: translateX(-50%) rotate(-135deg)
+    // 今天
+    // 星期
+    // 日 \/这个是转义,/是css支持的语法,在stylus里也是除号.
+    &-day
+        border-radius: ($date-col-width/10) \/ ($date-row-height/10)
+    // 取消
+    // 确定
+    &-ok
+        grid-column: 3
+    // 时间
+
+// 特定项
+.date
+    // 周末
+    &-weekend
+        color:var-danger
+    // 非当前月的日
+    &-dayout
+        opacity: 0.2
+    // 当日
+    &-today
+        background-color: var-gray
+    // 选中
+    &-selected
+        background-color: var-primary-dk
+        color: var-white
+    // 打开了选框的按钮
+    &-open
+        background-color: var-primary-lt
+ 
+// 选项框
+.date-ops
+    &-ym, &-time
         position: absolute
         left: 0
         width: 100%
-        border: 1px solid var-gray-dk
-        border-radius: 4px
-        border-top: none
-        background-color: var-gray
-        z-index: 9999
+        background-color: var-white
+        // css的calc写法时,如果有stylue变量,要用%s当占位符,表达式要放引号内.后面空格%空格接上变量名
+        height: 'calc(100% - %s)' % $date-row-height
+    // 年月框
+    &-ym
+        display:grid
+        grid-template-columns: 70% 30%
+        top: $date-row-height
+        border-top: 1px solid var-gray
+    &-year, &-month
+        display: grid
+    // 年框
     &-year
-        height: 200px
-        width: 200px
+        grid-template-rows: repeat(50,$date-row-height)
+        grid-template-columns: repeat(4,1fr)
         overflow-x: hidden
         overflow-y: scroll
-        padding: 10px 0
-    &-hour, &-minute, &-second
-        bottom: 48px
-        top: 0
-// 年份,月份,小时,分钟,秒 选项
-.date-option
-    &-year, &-month, &-hour, &-minute, &-second, &-title
-        border-bottom: 1px solid var-gray-dk
-        font-weight: 500
-    &-year, &-month
-        flex: 0 1 33.33333333%
-        height: 40px
-        line-height: 40px
-    &-year:hover, &-month:hover, &-hour:hover, &-minute:hover, &-second:hover
-        background-color: var-gray-dk
-    // 当前选中的年份,月份
-    &-year.selected, &-month.selected
-        background-color: var-primary
-        border-radius: 3px
-    &-hour
-        flex: 0 1 14.66666666%
-        line-height: 60px
-    &-minute, &-second
-        flex: 0 1 10%
-        line-height: 40px
-    // 小时选择框分组标题
-    &-title
-        color: var-gray-dk
-// 年,月,今天,前进,后退,时,分,秒,清空,确定 按钮
-.date-btn
-    &-year, &-month, &-today, &-prev, &-next, &-time, &-clear, &-ok
-        display: inline-block
-        font-weight: 600
-        border: 1px solid var-gray-dk
-        border-radius: 3px
-        height: 26px
-        line-height: 26px
-        cursor: pointer
-    &-year, &-month
-        color: var-font-color
-        width: calc(100% - 52px)
-    &-today, &-prev, &-next
-        color: var-primary
-    &-today, &-clear, &-ok
-        width: 100%
-    &-clear, &-ok
-        font-weight: 500
-        color: var-font-color
-    &-prev, &-next
-        width: 26px
-    &-clear:hover, &-ok:hover, &-prev:hover, &-next:hover
-        background-color: var-gray
+    // 月框
+    &-month
+        grid-template-rows: repeat(6,$date-row-height)
+        grid-template-columns: repeat(2,1fr)
+    // 时间框
     &-time
-        font-weight: 500
-        width: 32px
-        margin: 0 5px
-    // 时,分,秒 选项框打开时
-    &-time.open
-        color: #fff
-        background-color: var-primary
-// 星期项,日项
-.date-item
-    &-week, &-day
-        flex: 0 1 14.28571428%
-        font-weight: 500
-        height: 28px
-        line-height: 28px
-        border-radius: 3px
-    &-week
-        font-weight: 600
-    // 周六和周日
-    &-weekend
-        color: #cc0000
-    &-day:hover
-        background-color: var-gray
-    // 不属于当前月份的日项
-    &-dayoutmonth
-        opacity: 0.3
-    &-day.selected:not(&-today)
-        background-color: var-gray-dk
-    // 当天
-    &-today, &-today:hover
-        color: #fff
-        background-color: var-primary
+        display:grid
+        place-items:center
+        bottom: $date-row-height
+        border-bottom: 1px solid var-gray
+    // 时框
+    &-hour
+        position: relative
+        width:80%
+        height:80%
+        border-radius:50%
+        border:1px solid var-gray
+    // 分秒加减框
+    &-plus
+        position: absolute
+        top:45%
+        left:50%
+        transform: translateX(-50%)
+        display: grid
+        grid-template-rows: repeat(2,$date-row-height)
+        grid-template-columns: repeat(2,$date-col-width) ($date-col-width/2) repeat(2,($date-col-width*0.8))
+
+// 选项
+.date-op
+    // 年,月,时,上/下午/分秒加减按钮
+    &-year, &-month, &-hour, &-am, &-pm, &-plus
+        display: grid
+        place-items: center
+        font-weight:500
+    // 选项交替背景色
+    &-month:nth-of-type(4n+1),&-month:nth-of-type(4n+4)
+    &-year:nth-of-type(8n+1),&-year:nth-of-type(8n+2),&-year:nth-of-type(8n+7),&-year:nth-of-type(8n+8)
+    &-hour, &-plus
+        background-image: repeating-radial-gradient(transparent,var-gray-lt)
+    // 时
+    &-hour
+        position: absolute
+        width: $date-col-width
+        height: $date-row-height
+        border-radius: 50%
+        transform: translate(-50%,-50%)
+    &-hour.h12,&-hour.h6
+        left:50%
+    &-hour.h12
+        top:0
+    &-hour.h6
+        top: 100%
+    &-hour.h9, &-hour.h3 
+        top: 50%
+    &-hour.h9 
+        left: 0
+    &-hour.h3 
+        left: 100%
+    &-hour.h5, &-hour.h1 
+        left: 75%
+    &-hour.h11, &-hour.h1 
+        top: 6.9%
+    &-hour.h7, &-hour.h5 
+        top: 93.3%
+    &-hour.h11, &-hour.h7 
+        left: 25%
+    &-hour.h10, &-hour.h2 
+        top: 25%
+    &-hour.h10, &-hour.h8 
+        left: 6.9%
+    &-hour.h4, &-hour.h2 
+        left: 93.3%
+    &-hour.h8, &-hour.h4 
+        top: 75%
+    // 上/下午
+    &-am, &-pm
+        position: absolute
+        width: $date-col-width
+        height: $date-row-height
+        top:20%
+        transform: translateX(-50%)
+    &-am
+        left:35%
+    &-pm
+        left:65%
+    // 分秒加减
+    &-plus:nth-of-type(3), &-plus:nth-of-type(7)
+        grid-column: 4
+
+// hover
+@media (any-hover: hover)
+    .date
+        // 年月/年月选项/进退/今天/日/清空/时间/时间选项/确定
+        &-col-ym:hover, &-col-prev:hover, &-col-next:hover, &-col-today:hover, &-col-day:hover, &-col-clear:hover, &-col-ok:hover, &-col-time:hover
+        &-op-year:hover, &-op-month:hover, &-op-hour:hover, &-op-am:hover, &-op-pm:hover, &-op-plus:hover
+            background-color: var-primary-lt
+            cursor: pointer
+
+// active 选项点击
+.date-op
+    &-year:active, &-month:active,&-hour:active,&-am:active,&-pm:active,&-plus:active
+        font-weight:700
+
 // 手机版显示
 @media only screen and (max-width: $screen-phone) 
     .date-box
         position: fixed
-        width: calc(100vw - 2px)
-        height: 372px
-        border-color: var-gray-dk
-        right: 0
-        margin: auto
-    .date-select
-        &-year
-            height: 240px
-    .date-option
-        &-year, &-month
-            height: 48px
-            line-height: 48px
-    .date-btn
-        &-year, &-month, &-today, &-prev, &-next, &-time, &-clear, &-ok
-            height: 40px
-            line-height: 40px
-
-        &-year, &-month
-            width: calc(100% - 80px)
-
-        &-prev, &-next
-            width: 40px
-    .date-item
-        &-week, &-day
-            height: 36px
-            line-height: 36px
+        top: 25vh
+        left: 0
+        width: 100vw
